@@ -170,6 +170,11 @@ module Gem
       end
     end
 
+    add_common_option('-s', '--source URL', 'Use URL as the remote source for gems') do |value, options|
+      require_gem("sources")
+      Gem.sources.clear
+      Gem.sources << value
+    end
     add_common_option('-p', '--[no-]http-proxy [URL]', 'Use HTTP proxy for remote operations') do |value, options|
       options[:http_proxy] = (value == false) ? :no_proxy : value
     end
